tests/ui/consts/issue-17718-const-bad-values.stderr
error[E0764]: mutable references are not allowed in the final value of constants
  --> $DIR/issue-17718-const-bad-values.rs:7:34
   |
LL | const C1: &'static mut [usize] = &mut [];
   |                                  ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0764`.
